@@ -51,6 +51,10 @@ Changes in version 0.2.0.8-alpha - 2007-??-??
       advantage of 64-bit platforms and to remove some possibly-costly
       voodoo.
 
+  o Minor bugfixes (portability):
+    - On some platforms, accept() can return a broken address.  Detect
+      this more quietly, and deal accordingly.  (Fixes bug 483.)
+
   o Code simplifications and refactoring:
     - Make a bunch of functions static.  Remove some dead code.
     - Pull out about a third of the really big routerlist.c; put it in a
